--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -677,3 +677,50 @@ jobs:
             artifacts/**
             state/**
           if-no-files-found: error
+
+
+  agent_linux:
+    name: Agent Linux (unit + contract)
+    runs-on: ubuntu-latest
+    needs: unit
+    if: ${{ always() && needs.unit.result == 'success' }}
+    steps:
+      - uses: actions/checkout@v4
+      - uses: ./.github/actions/fg-secrets
+      - uses: ./.github/actions/fg-python-setup
+        with:
+          python-version: "3.12"
+          install-os-deps: "true"
+          prepare-workspace: "true"
+          build-venv: "true"
+      - name: Agent unit tests
+        run: make agent-unit
+      - name: Core OpenAPI contract refresh check
+        run: make contracts-core-gen && git diff --exit-code contracts/core/openapi.json
+
+  agent_windows:
+    name: Agent Windows Build
+    runs-on: windows-latest
+    needs: unit
+    if: ${{ always() && needs.unit.result == 'success' }}
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+      - name: Build Windows agent
+        shell: powershell
+        run: make agent-build-windows
+      - name: Verify dist manifest and hash
+        shell: powershell
+        run: |
+          if (!(Test-Path dist/manifest.json)) { throw "manifest missing" }
+          if (!(Test-Path dist/frostgate-agent.exe.sha256)) { throw "sha256 missing" }
+      - uses: actions/upload-artifact@v4
+        with:
+          name: frostgate-agent-windows
+          path: |
+            dist/frostgate-agent.exe
+            dist/frostgate-agent.exe.sha256
+            dist/manifest.json
+          if-no-files-found: error
